--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,23 @@
-python-3.7.3
+astroid==2.4.1
+bcrypt==3.1.7
+cffi==1.13.1
+Click==7.0
+colorama==0.4.3
+Flask==1.1.1
+Flask-Bcrypt==0.7.1
+isort==4.3.21
+itsdangerous==1.1.0
+Jinja2==2.10.3
+lazy-object-proxy==1.4.3
+MarkupSafe==1.1.1
+mccabe==0.6.1
+mysql-connector-python==8.0.18
+protobuf==3.10.0
+pycparser==2.19
+pylint==2.5.2
+PyMySQL==0.9.3
+six==1.12.0
+toml==0.10.0
+typed-ast==1.4.1
+Werkzeug==0.16.0
+wrapt==1.12.1
